--- a/CSS/style.css
+++ b/CSS/style.css
@@ -13,6 +13,7 @@
 	font-family: "arial", sans-serif;
 	font-weight: bolder;
 	/*background-color:rgba(0, 0, 0, 0.2);*/
+	background-color: black;
 }
 
 #page-wrap{
